--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -6,7 +6,8 @@ name: Hello Actions
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches:
+      - master
   pull_request:
     types: [closed]
 
