--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -29,7 +29,17 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello $name!
+        run: |
+          echo Hello $name!
+          echo Actor: ${{ github.actor }}
+          echo Committed By: ${{ github.event.commits[0].author.name }}
+
+  dump:
+    runs-on: ubuntu-latest
+    steps:
+      - env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
 
   pull_request_only:
     runs-on: ubuntu-latest
