--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -1,39 +1,34 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Hello Actions
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches:
       - master
   pull_request:
     types: [closed]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 env:
   name: Janssen Lima
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      name: Janssen dos Reis Lima
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: Build Project
     steps:
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: |
-          echo Hello $name!
-          echo Actor: ${{ github.actor }}
-          echo Committed By: ${{ github.event.commits[0].author.name }}
-
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - name: install
+      run: npm install
+    - name: build
+      run: npm run build
+    - name: deploy
+      uses: demurgos/ga-deploy-git@v1
+      with: 
+        accessToken: ${{ secrets.access_token }}
+        srcDir: build
+        destBranch: gh-pages
   cotacao:
     runs-on: ubuntu-latest
     env:
